--- a/src/main/java/fr/univ_amu/iut/app_main/LaunchAppView.fxml
+++ b/src/main/java/fr/univ_amu/iut/app_main/LaunchAppView.fxml
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.*?>
+<?import fr.univ_amu.iut.contenu.accueil.AccueilOnglet?>
 <fx:root xmlns:fx="http://javafx.com/fxml"
-         type="javafx.scene.layout.VBox" styleClass="root">
-    <TabPane fx:id = "root" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" tabClosingPolicy="UNAVAILABLE" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/16">
-      <tabs>
-      </tabs>
-    </TabPane>
+         type="javafx.scene.control.TabPane">
+
+
 </fx:root>
