Ajout de fonctionnalités dans les onglets

--- a/src/main/java/fr/univ_amu/iut/contenu/accueil/AccueilContenuView.fxml
+++ b/src/main/java/fr/univ_amu/iut/contenu/accueil/AccueilContenuView.fxml
@@ -13,6 +13,6 @@
       <Button mnemonicParsing="false" onAction="#startupTabs" text="Button" BorderPane.alignment="CENTER" />
    </bottom>
    <top>
-      <ImageView fitHeight="150.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true" BorderPane.alignment="CENTER" />
+      <ImageView fx:id ="imageview" fitHeight="150.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true" BorderPane.alignment="CENTER" />
    </top>
 </fx:root>
