--- a/src/main/java/fr/univ_amu/iut/components/LabelUsageView.fxml
+++ b/src/main/java/fr/univ_amu/iut/components/LabelUsageView.fxml
@@ -3,4 +3,8 @@
 <?import javafx.scene.control.*?>
 
 
-<Label text="Label" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" />
+<fx:root xmlns="http://javafx.com/javafx"
+         xmlns:fx="http://javafx.com/fxml"
+         type="javafx.scene.control.Label">
+
+</fx:root>
