--- a/src/main/java/fr/univ_amu/iut/contenu/accueil/AccueilContenuView.fxml
+++ b/src/main/java/fr/univ_amu/iut/contenu/accueil/AccueilContenuView.fxml
@@ -4,15 +4,19 @@
 <?import javafx.scene.image.*?>
 <?import javafx.scene.layout.*?>
 
-
-<fx:root type="javafx.scene.layout.BorderPane" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1">
+<fx:root prefHeight="266.0" prefWidth="458.0" type="javafx.scene.layout.BorderPane" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1">
    <center>
-      <Label text="Label" BorderPane.alignment="CENTER" />
+      <Label text="Bienvenus sur l'Apllication" BorderPane.alignment="CENTER" />
    </center>
-   <bottom>
-      <Button mnemonicParsing="false" onAction="#startupTabs" text="Button" BorderPane.alignment="CENTER" />
-   </bottom>
    <top>
-      <ImageView fx:id ="imageview" fitHeight="150.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true" BorderPane.alignment="CENTER" />
+      <ImageView fx:id="imageview" fitHeight="143.0" fitWidth="395.0" pickOnBounds="true" preserveRatio="true" BorderPane.alignment="CENTER" />
    </top>
+   <bottom>
+      <HBox alignment="CENTER" prefHeight="39.0" prefWidth="458.0" BorderPane.alignment="CENTER">
+         <children>
+            <Button mnemonicParsing="false" onAction="#startupAdmin" text="Acceder au menu d'administration" />
+            <Button alignment="CENTER_RIGHT" mnemonicParsing="false" onAction="#startupTabs" text="Acceder à l'application" />
+         </children>
+      </HBox>
+   </bottom>
 </fx:root>
